UTIL-276 Remove modules