@@ -65,14 +65,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven-surefire-plugin.version}</version>
-				<configuration>
-					<!-- Hopefully this can be removed in future surefire versions -->
-					<argLine>
-						@{argLine}
-						--add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
-						--add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
-					</argLine>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
